--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/register/register.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/register/register.html
@@ -7,7 +7,7 @@
         <form #registrationForm="ngForm">
             <h2>Registration Form</h2>
             <div class="form-group">
-                <label>First Name</label>
+                <label>First Name</label><em class="danger-text h4">*</em>
                 <input required pattern="^[a-zA-Z_ ]*$" type="text" class="form-control" [(ngModel)]="testAttendees.firstName" name="firstName" #firstName="ngModel" maxlength="255" />
                 <div class="errors-container">
                     <span *ngIf="firstName.touched && !firstName.valid && firstName.errors.pattern" class="error-msg">First Name can only contain letters, underscores or spaces.</span>
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>Last Name</label>
+                <label>Last Name</label><em class="danger-text h4">*</em>
                 <input required pattern="^[a-zA-Z_ ]*$" type="text" class="form-control" [(ngModel)]="testAttendees.lastName" name="lastName" #lastName="ngModel" maxlength="255" />
                 <div class="errors-container">
                     <span *ngIf="lastName.touched && !lastName.valid && lastName.errors.pattern" class="error-msg">Last Name can only contain letters, underscores or spaces.</span>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>Email</label>
+                <label>Email</label><em class="danger-text h4">*</em>
                 <input required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{3}" type="email" class="form-control" [(ngModel)]="testAttendees.email" name="email" #email="ngModel" maxlength="255" />
                 <div class="errors-container">
                     <span *ngIf="email.touched && !email.valid && email.errors.pattern" class="error-msg">This Email is invalid.</span>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>Roll Number</label>
+                <label>Roll Number</label><em class="danger-text h4">*</em>
                 <input required pattern="^[a-zA-Z0-9]*$" type="text" class="form-control" [(ngModel)]="testAttendees.rollNumber" name="rollNumber" #rollNumber="ngModel" />
                 <div class="errors-container">
                     <span *ngIf="rollNumber.touched && !rollNumber.valid && rollNumber.errors.pattern" class="error-msg">This Roll Number is invalid.</span>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>Contact Number</label>
+                <label>Contact Number</label><em class="danger-text h4">*</em>
                 <input required pattern="^[+]?([0-9]{0,15})$" type="text" class="form-control" [(ngModel)]="testAttendees.contactNumber" name="contactNumber" #contactNumber="ngModel" maxlength="15" />
                 <div class="errors-container">
                     <span *ngIf="contactNumber.dirty && !contactNumber.valid && contactNumber.errors.pattern" class="error-msg">Contact Number can only contain numbers.</span>
