--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -10,7 +10,7 @@
     <form (ngSubmit)="changePassword(user)" #passwordForm="ngForm">
         <md-dialog-content>
             <div class="form-group">
-                <label>Current Password</label>
+                <label>Current Password</label><em class="danger-text h4">*</em>
                 <input type="password" class="form-control" [(ngModel)]="user.oldPassword" name="oldpassword" #oldpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
                 <div class="errors-container">
                     <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched) && oldpassword.errors.required' class='error-msg'>Please enter your current password.</span>
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>New Password</label>
+                <label>New Password</label><em class="danger-text h4">*</em>
                 <input required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[\W]).{8,14}$" type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" />
                 <div class="errors-container">
                     <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.dirty && !newpassword.valid' class='error-msg'>Please enter your new password.</span>
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>Confirm Password</label>
+                <label>Confirm Password</label><em class="danger-text h4">*</em>
                 <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" name="confirmpassword" #confirmpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
                 <div class="errors-container">
                     <span *ngIf='confirmpassword.errors && confirmpassword.dirty && !newpassword.valid' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password.</span>
