--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -9,7 +9,7 @@
             <div class="form-area">
                 <fieldset [disabled]="showIsPausedButton && !testDetails.isPaused">
                     <div class="form-group">
-                        <label>Time Duration (mins)</label>
+                        <label>Time Duration (mins)</label><em class="danger-text h4">*</em>
                         <input type="text" class="form-control small-width" [(ngModel)]="testDetails.duration" name="Duration" placeholder="00" #Duration="ngModel" required pattern="^(0*[1-9])\d{0,3}?$" (keyup)="isWarningTimeValid()" />
                         <div class="errors-container">
                             <span class="error-msg" *ngIf="Duration.errors && Duration.dirty && !Duration.valid && Duration.errors.required">Required</span>
@@ -68,7 +68,7 @@
                         <div class="errors-container"></div>
                     </div>
                     <div class="form-group inline-field">
-                        <label>Correct Marks</label>
+                        <label>Correct Marks</label><em class="danger-text h4">*</em>
                         <input type="text" class="form-control small-width" [(ngModel)]="testDetails.correctMarks" name="CorrectMarks" #CorrectMarks="ngModel" required pattern="^(0*[1-9])\d{0,3}(\.{1}\d{1,2})?$" min="0" />
                         <div class="errors-container">
                             <span class="error-msg" *ngIf="CorrectMarks.errors && CorrectMarks.dirty && !CorrectMarks.valid && CorrectMarks.errors.required">Required</span>
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="form-group inline-field">
-                        <label>Incorrect Marks</label>
+                        <label>Incorrect Marks</label><em class="danger-text h4">*</em>
                         <input type="text" class="form-control small-width" [(ngModel)]="testDetails.incorrectMarks" name="IncorrectMarks" #IncorrectMarks="ngModel" required pattern="^\d{0,3}(\.\d{1,2})?$" min="0" />
                         <div class="errors-container">
                             <span class="error-msg" *ngIf="IncorrectMarks.errors && IncorrectMarks.dirty && !IncorrectMarks.valid && IncorrectMarks.errors.required">Required</span>
