Fixed bug #23637 and background text in test conduct while loading

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -2,7 +2,7 @@
   <div class="spinner">
   </div>
 </div>
-<div class="test" id="testElement">
+<div class="test" id="testElement" *ngIf="!isInitializing">
   <div class="test-header">
     <div class="container-fluid">
       <div class="display-table">
