--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -35,15 +35,7 @@
         </div>
         <div class="form-group">
           <label>Question Details</label><em class="danger-text h4">*</em>
-          <!--<ckeditor [config]="{extraPlugins:'divarea',entity_encoding:'raw'}" [(ngModel)]="questionModel.question.questionDetail" id="detail" name="detail" #detail="ngModel" (change)="onChange($event)" required></ckeditor>
-          <div class="errors-container">
-            <div *ngIf="detail.errors && (detail.dirty || detail.touched)">
-              <div [hidden]="!detail.errors.required">
-                <span class="error-msg">Required</span>
-              </div>
-            </div>
-          </div>-->
-          <ckeditor [config]="{extraPlugins:'divarea'}" [(ngModel)]="questionModel.question.questionDetail" id="detail" name="detail" minlength="1" (focusout)="onFocusCkeditor($event)" #detail="ngModel" required></ckeditor>
+          <ckeditor [config]="{extraPlugins:'divarea,uploadimage', imageUploadUrl:'/api/question/uploadDragImage', filebrowserImageUploadUrl:'/api/question/uploadImage', filebrowserBrowseUrl: '/api/question/browseImage'}" [(ngModel)]="questionModel.question.questionDetail" id="detail" name="detail" minlength="1" (focusout)="onFocusCkeditor($event)" #detail="ngModel" required></ckeditor>
           <div class="errors-container">
             <div *ngIf="detail.errors && isCkeditorDirtly">
               <div [hidden]="!detail.errors.required">
