--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -32,6 +32,7 @@
                     <option value="2">Expired Test ({{expiredTestCount}})</option>
                     <option value="3">Blocked Test ({{blockedTestCount}})</option>
                     <option value="4">Unfinished Test ({{unfinishedTestCount}})</option>
+                    <option value="star">Starred Candidates ({{starredCandidateCount}})</option>
                 </select>
                 <button type="button" class="btn" (click)="downloadTestBasicDetails()" *ngIf="!showGenerateReportButton && !noCandidateFound">Download Excel</button>
                 <button type="button" class="btn" (click)="downloadTestReportPdf()" *ngIf="!noCandidateFound">Download PDF</button>
