--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -30,17 +30,18 @@
                             <span class="error-msg" *ngIf="validEndDate">End DateTime must be greater than start DateTime.</span>
                         </div>
                     </div>
-                    <div class="form-group ip-restrictions">
-                        <label>IP Restrictions</label>
-                        <div class="ip-add-field" *ngFor="let ip of testDetails.testIpAddress; let i= index">
-                            <input type="text" class="form-control small-width" id="From" name="ip_{{i}}" placeholder="IP Address {{i+1}}" (keyup)="IpAddressAdded(ip.ipAddress)" (focus)="IpAddressAdded(ip.ipAddress)" #From=ngModel [(ngModel)]="ip.ipAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
-                            <em class="material-icons" (click)="removeIpAddress(i,ip.id,ip.ipAddress)">close</em>
-                            <div class="errors-container">
-                                <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP address in correct format.</span>
-                            </div>
-                        </div>
-                        <button md-mini-fab type="button" [disabled]="showIsPausedButton && !testDetails.isPaused || !isIpAddressAdded" (click)="addIpFields()"><md-icon>add</md-icon></button>
+                  <div class="form-group ip-restrictions">
+                    <label>IP Restrictions</label>
+                    <div class="ip-add-field" *ngFor="let ip of testDetails.testIpAddress; let i= index">
+                      <input type="text" class="form-control small-width" id="From" name="ip_{{i}}" placeholder="IP Address {{i+1}}" (keyup)="IpAddressAdded(ip.ipAddress);showErrorMessage(ip)" (focus)="IpAddressAdded(ip.ipAddress)" #From=ngModel [(ngModel)]="ip.ipAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+                      <em class="material-icons" (click)="removeIpAddress(i,ip.id,ip.ipAddress)">close</em>
+                      <div class="errors-container">
+                        <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP address in correct format.</span>
+                        <span class="error-msg" *ngIf="ip.isErrorMessageVisible">Add IP Address or remove this field.</span>
+                      </div>
                     </div>
+                    <button md-mini-fab type="button" [disabled]="showIsPausedButton && !testDetails.isPaused || !isIpAddressAdded" (click)="addIpFields()"><md-icon>add</md-icon></button>
+                  </div>
                     <div class="form-group">
                         <label>Browser Tolerance</label>
                         <select class="form-control half-width" [(ngModel)]="testDetails.browserTolerance" name="Browser Tolerance">
