--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -18,14 +18,14 @@
                     </div>
                     <div class="form-group inline-field">
                         <label>Start Date & Time</label>
-                        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.startDate" name="Start Date" (mouseup)="isStartDateValid()" (keyup)="isStartDateValid()"/>
+                        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.startDate" name="Start Date" (mouseup)="isStartDateValid()" (keyup)="isStartDateValid()" />
                         <div class="errors-container">
                             <span class="error-msg small-width" *ngIf="validStartDate">Start DateTime must be greater than current DateTime.</span>
                         </div>
                     </div>
                     <div class="form-group inline-field">
                         <label>End Date & Time</label>
-                        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.endDate" name="End Date" (mouseup)="isEndDateValid(testDetails.endDate)" (keyup)="isEndDateValid(testDetails.endDate)"/>
+                        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.endDate" name="End Date" (mouseup)="isEndDateValid(testDetails.endDate)" (keyup)="isEndDateValid(testDetails.endDate)" />
                         <div class="errors-container">
                             <span class="error-msg" *ngIf="validEndDate">End DateTime must be greater than start DateTime.</span>
                         </div>
@@ -50,6 +50,13 @@
                             <option value="3">High</option>
                         </select>
                         <div class="errors-container"></div>
+                    </div>
+                    <div class="form-group" *ngIf="testDetails.browserTolerance !='0'">
+                        <label>Focus Lost Time (secs)</label>
+                        <input type="text" pattern="[0-9]*" class="form-control small-width" placeholder="00" [(ngModel)]="testDetails.focusLostTime" name="FocusLostTime" min="0" #FocusLostTime="ngModel" />
+                        <div class="errors-container">
+                            <span class="error-msg" *ngIf="FocusLostTime.errors && FocusLostTime.dirty && !FocusLostTime.valid && FocusLostTime.errors.pattern">Invalid Time</span>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label>Question Order</label>
