--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -167,7 +167,7 @@
         </div>
       </div>
       <div class="actions-area">
-        <button type="button" class="btn" [routerLink]="['/questions']">Cancel</button>
+        <button type="button" class="btn" (click)="cancelButtonClicked()">Cancel</button>
         <button type="submit" class="btn btn-primary" [disabled]="!codeSnippetForm.valid || nolanguageSelected > 0">Save</button>
       </div>
     </form>
