Removed one condition from test.html.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -14,7 +14,7 @@
         <button type="button" class="btn btn-primary" (click)="goOnline()">Resume Test</button>
     </div>
 </div>
-<div class="test" id="testElement" *ngIf="!isInitializing && isTestReady">
+<div class="test" id="testElement" *ngIf="!isInitializing">
     <div class="test-header">
         <div class="container-fluid">
             <div class="display-table">
