auto-complete added

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -74,6 +74,7 @@
                         <ace-editor [(text)]="codeAnswer"
                                     (textChanged)="onChange($event)"
                                     [mode]="selectedMode"
+                                    [options]="optionsForAuto"
                                     [theme]="selectedTheme"
                                     #editor
                                     id="edit"
